(test
 (name tokenizer)
 (modules tokenizer)
 (libraries pkulang alcotest))

(test
 (name parse_expr)
 (modules parse_expr)
 (libraries pkulang alcotest))

(test
 (name parse_stmts)
 (modules parse_stmts)
 (libraries pkulang alcotest))

(test
 (name parse_program)
 (modules parse_program)
 (libraries pkulang alcotest))

(test
 (name test_symbol_table)
 (modules test_symbol_table)
 (libraries pkulang alcotest))