(test
 (name tokenizer)
 (modules tokenizer)
 (libraries pkulang alcotest))

(test
 (name parse_expr)
 (modules parse_expr)
 (libraries pkulang alcotest))

(test
 (name parse_stmts)
 (modules parse_stmts)
 (libraries pkulang alcotest))

(test
 (name parse_program)
 (modules parse_program)
 (libraries pkulang alcotest))

(test
 (name runtime_basic)
 (modules runtime_basic)
 (libraries pkulang alcotest))

(test
 (name runtime_arrays)
 (modules runtime_arrays)
 (libraries pkulang alcotest))

(test
 (name runtime_gc)
 (modules runtime_gc)
 (libraries pkulang alcotest))

(test
 (name runtime_coroutines)
 (modules runtime_coroutines)
 (libraries pkulang alcotest))

(test
 (name runtime_objs)
 (modules runtime_objs)
 (libraries pkulang alcotest))

(test
 (name test_symbol_table)
 (modules test_symbol_table)
 (libraries pkulang alcotest))

(test
 (name codegen)
 (modules codegen)
 (libraries pkulang alcotest))
